--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-            repository: tootsuite/mastodon
+            repository: mastodon/mastodon
             ref: '${{ github.event.inputs.target }}'
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
